--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
       body {
         font-family: 'Roboto', sans-serif;
         max-width: 100%;
-        background: #11274e;
+        background: #051f3a;
         color: rgb(236, 236, 236);
+        background-image: url('stars_medium.png');
       }
       .container {
-        width: 380px;
+        max-width: 100%;
+        width: 500px;
         padding: 0 1rem;
         margin: 0 auto;
       }
@@ -55,6 +57,9 @@
       a,
       a:visited {
         color: #6fa8dc;
+      }
+      p {
+        line-height: 1.5;
       }
     </style>
   </head>
