--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
         height: 200px;
         margin: 0 auto;
         display: block;
-        border: 8px solid rgb(238, 238, 238);
+        /* border: 4px solid rgb(238, 238, 238); */
+        box-shadow: 0px 0px 15px #2a4997;
       }
       #profile {
         border-radius: 50%;
